components/ReviewBox/review.module.scss
.container {
  padding: 1rem;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(76, 175, 80, 0.5);
  margin-top: 1rem;
}

.header {
  width: 30%;
  margin: 1rem auto;
  display: flex;
  justify-content: space-between;
}

.userBox {
  display: flex;
  align-items: center;
}

.avatar {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  overflow: hidden;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  margin-left: 0.5rem;
}

.review {
  margin-top: 0.5rem;
  padding-left: 4rem;
  padding-right: 4rem;
  line-height: 2;
}

